# rdp-mocks

./: CLAUDE.md  MANUAL.md  README.md  commandChannel.cpp  commandChannel.h  meson.build  mockOptions.cpp  mockOptions.h  outputChannel.cpp  outputChannel.h  rdp-client-mock.cpp  rdp-client-mock.h  rdp-mocks.accendino  rdp-server-mock.cpp  rdp-server-mock.h  rdpmocks.options  test-client-server-connect.cpp
.github/workflows/: ci-github.yml
